--- a/compiler/package.conf.in
+++ b/compiler/package.conf.in
@@ -277,6 +277,7 @@ import-dirs:   FPTOOLS_TOP_ABS"/compiler/stage"STAGE"/utils",
 	       FPTOOLS_TOP_ABS"/compiler/stage"STAGE"/deSugar",
 	       FPTOOLS_TOP_ABS"/compiler/stage"STAGE"/ghci",
 	       FPTOOLS_TOP_ABS"/compiler/stage"STAGE"/coreSyn",
+               FPTOOLS_TOP_ABS"/compiler/stage"STAGE"/vectorise",
 	       FPTOOLS_TOP_ABS"/compiler/stage"STAGE"/specialise",
 	       FPTOOLS_TOP_ABS"/compiler/stage"STAGE"/simplCore",
 	       FPTOOLS_TOP_ABS"/compiler/stage"STAGE"/stranal",
