Fix the +RTS -V0 option introduced recently; it didn't work at all, now it does. Also, I documented it.  +RTS -V0 disables the internal RTS timer completely, which is useful for repeatable debugginng.

--- a/rts/Makefile
+++ b/rts/Makefile
@@ -330,7 +330,7 @@ sm/Compact_HC_OPTS += -optc-finline-limit=2500
 SRC_CC_OPTS += -fno-strict-aliasing
 
 # Cmm must be compiled via-C for now, because the NCG can't handle loops
-SRC_HC_OPTS += -fvia-C
+# SRC_HC_OPTS += -fvia-C
 
 # We *want* type-checking of hand-written cmm.
 SRC_HC_OPTS += -dcmm-lint 
