--- a/compiler/Makefile.ghcbin
+++ b/compiler/Makefile.ghcbin
@@ -17,6 +17,8 @@ ifeq "$(stage)" "3"
 HC=$(GHC_STAGE2)
 endif
 
+EXCLUDED_C_SRCS += ghc-inplace.c
+
 SRC_HC_OPTS += -package ghc
 SRC_HC_OPTS += -Istage$(stage)
 SRC_HC_OPTS += \
