--- a/compiler/Makefile.ghcbin
+++ b/compiler/Makefile.ghcbin
@@ -45,6 +45,9 @@ endif
 ifeq "$(GhcProfiled)" "YES"
 SRC_HC_OPTS += -prof
 endif
+ifeq "$(GhcDebugged)" "YES"
+SRC_LD_OPTS += -debug
+endif
 
 odir=stage$(stage)
 
